--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
+     "husky": "^9.1.7",
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
     "mongoose": "^8.13.0",
