fix(db_uri): change mongo uri

--- a/.env
+++ b/.env
@@ -11,8 +11,7 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:8080
 PARTY_SERVICE_URL=https://production.accessed.co:8443/party-service
 
 # Database settings
-DATABASE_NAME=accessed-customer-support
-DATABASE_URI=mongodb+srv://duynguyen:IKg2N5XuyMWv8KiL@cluster0.31drl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://accessed:MbFauVPNp5MtmIjl@accessed-prod.q0usm.mongodb.net/accessed_support?retryWrites=true&w=majority&appName=accessed-prod
 
 # AWS S3
 AWS_REGION=ap-southeast-1
