--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_NAME=accessed-customer-support
 API_PREFIX=api
 BASE_URL=http://localhost:3333
 CORS_ENABLED=true
-CORS_ORIGINS=http://localhost:3000,http://localhost:8080
+CORS_ORIGINS=*
 
 # Party Service
 PARTY_SERVICE_URL=https://production.accessed.co:8443/party-service
