--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_NAME=accessed-customer-support
 API_PREFIX=api
 BASE_URL=http://localhost:3333
 CORS_ENABLED=true
-CORS_ORIGINS=*
+CORS_ORIGINS=https://develop.d1aaqal8she1gy.amplifyapp.com,http://localhost:3000,http://localhost:3001
 
 # Party Service
 PARTY_SERVICE_URL=https://production.accessed.co:8443/party-service
