--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,8 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
+## dotenv environment variables file
+#.env
 
 # next.js build output
 .next
