--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ PARTY_SERVICE_URL=https://production.accessed.co:8443/party-service
 PAYMENT_SERVICE_URL=http://accessed-payment-production.us-west-2.elasticbeanstalk.com
 
 # Database settings
-MONGO_URI=mongodb+srv://accessed:MbFauVPNp5MtmIjl@accessed-prod.q0usm.mongodb.net/accessed_support?retryWrites=true&w=majority&appName=accessed-prod
+MONGO_URI=mongodb+srv://accessed:owV4Fgv7vMoNWRUE@accessed-prod.q0usm.mongodb.net/accessed_support?retryWrites=true&w=majority&appName=accessed-prod
 
 # AWS S3
 AWS_REGION=ap-southeast-1
