update: update env staging and ticket sub type kyc

--- a/.env.staging
+++ b/.env.staging
@@ -15,7 +15,7 @@ PAYMENT_SERVICE_URL=http://accessed-payment-staging.us-west-2.elasticbeanstalk.c
 MESSAGE_SERVICE_URL=http://accessed-messaging-staging.us-west-2.elasticbeanstalk.com/v1
 
 # Database settings
-MONGO_URI=mongodb+srv://accessed:pDRCdTGGgbP4Va2@accessed.uvaet.mongodb.net/accessed_message?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://accessed:pDRCdTGGgbP4Va2@accessed.uvaet.mongodb.net/accessed_support?retryWrites=true&w=majority
 
 # AWS S3
 AWS_REGION=us-west-2
