feat: am-19045: create conversation when ticket is created

--- a/.env
+++ b/.env
@@ -17,6 +17,8 @@ MESSAGE_SERVICE_URL=http://accessed-message-production.us-west-2.elasticbeanstal
 # Database settings
 MONGO_URI=mongodb+srv://accessed:owV4Fgv7vMoNWRUE@accessed-prod.q0usm.mongodb.net/accessed_support?retryWrites=true&w=majority&appName=accessed-prod
 
+ACCESSED_COMPANY_ID=4:23b2fe67-07bd-4b24-b0df-087ad126c675:291738
+
 # AWS S3
 AWS_REGION=ap-southeast-1
 AWS_ACCESS_KEY_ID=AKIAQ3EGWQSRSLH2GJWK
