--- a/.env.staging
+++ b/.env.staging
@@ -17,6 +17,8 @@ MESSAGE_SERVICE_URL=http://accessed-messaging-staging.us-west-2.elasticbeanstalk
 # Database settings
 MONGO_URI=mongodb+srv://accessed:pDRCdTGGgbP4Va2@accessed.uvaet.mongodb.net/accessed_support?retryWrites=true&w=majority
 
+ACCESSED_COMPANY_ID=i473qs28k04vTeVxO33tD
+
 # AWS S3
 AWS_REGION=us-west-2
 AWS_ACCESS_KEY_ID=AKIASNQAGO5FTKNYNQYC
