feat: am-19047: setup to send notify

--- a/.env.staging
+++ b/.env.staging
@@ -25,3 +25,6 @@ AWS_ACCESS_KEY_ID=AKIASNQAGO5FTKNYNQYC
 AWS_SECRET_ACCESS_KEY=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
 AWS_S3_BUCKET=accessed
 AWS_S3_PREFIX=customer-support  
+
+RABBITMQ_SERVER_URL=amqps://accessed_mq:[A]ccessed%40RabbitMQ@b-3cff4c9f-34f3-4dfa-9906-5e3761f86851.mq.us-west-2.amazonaws.com:5671
+RABBITMQ_NOTIFICATION_QUEUE=feed_notification_queue_staging
