--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.12",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/microservices": "^11.1.5",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.12",
     "@nestjs/swagger": "^11.1.0",
     "@types/lodash": "^4.17.16",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.8",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -57,6 +60,7 @@
     "@nestjs/cli": "^11.0.5",
     "@nestjs/schematics": "^11.0.2",
     "@nestjs/testing": "^11.0.12",
+    "@types/amqplib": "^0.10.7",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
