--- a/.env.production
+++ b/.env.production
@@ -15,7 +15,7 @@ PAYMENT_SERVICE_URL=http://accessed-payment-production.us-west-2.elasticbeanstal
 MESSAGE_SERVICE_URL=http://accessed-message-production.us-west-2.elasticbeanstalk.com/v1
 
 # Database settings
-MONGO_URI=mongodb+srv://accessed:owV4Fgv7vMoNWRUE@accessed-prod.q0usm.mongodb.net/accessed_support?retryWrites=true&w=majority&appName=accessed-prod
+MONGO_URI=mongodb+srv://accessed_support:HtxXtFyrALtrVPT4@accessed-prod.q0usm.mongodb.net/accessed_support?retryWrites=true&w=majority&appName=accessed-prod
 
 ACCESSED_COMPANY_ID=4:23b2fe67-07bd-4b24-b0df-087ad126c675:291738
 
